@@ -1,3 +1,9 @@
+Wed Apr 12 02:29:11 2006  Tim Janik  <timj@gtk.org>
+
+	* configure.in: provide SSE_FLAGS and WITH_SSE_FLAGS automake conditional.
+
+	* acbeast.m4: added MC_PROG_CC_SPECIAL_FLAGS() to help constructing SSE_FLAGS.
+
 Tue Apr 11 23:33:42 2006  Tim Janik  <timj@gtk.org>
 
 	* autogen.sh: add --with-doxer configure arg which holds TRUE for CVS builds.
